:bug: fix full-height issue on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
 }
 
 html, body, #root {
-  height: 100%;
+  min-height: 100%;
 }
 
 ::-webkit-scrollbar {
